Subsection code finally working

--- a/evita/Cargo.toml
+++ b/evita/Cargo.toml
@@ -2,3 +2,6 @@
 name = "evita"
 version = "0.1.0"
 authors = ["Oreoluwa Babarinsa <oreoluwa.babarinsa@gmail.com>"]
+
+[dependencies.toml]
+git = "https://github.com/alexcrichton/toml-rs.git"
